# TheBook

./: Cargo.toml
Chapter1/hello_cargo/src/: main.rs
Chapter1/hello_world/: main
Chapter10/ch10_3/: Cargo.toml
Chapter10/ch10_3/src/: main.rs
Chapter10/generics/src/: main.rs
Chapter10/traits/src/: lib.rs  main.rs  news_article.rs  traits.rs  tweet.rs
Chapter11/adder/src/: lib.rs
Chapter12/minigrep/src/: lib.rs  main.rs
Chapter2/guessing_game/src/: main.rs
Chapter3/: data_types.rs
Chapter3/control_flow/src/: main.rs
Chapter3/functions/src/: main.rs
Chapter3/variables/src/: main.rs
Chapter4/: mutable_references.rs  ownership.rs  ownership_function.rs  references.rs  slice_type.rs
Chapter5/ch5_1/src/: main.rs
Chapter5/ch5_2/: Cargo.toml
Chapter5/ch5_2/src/: main.rs
Chapter5/ch5_3_methods/: Cargo.toml
Chapter5/ch5_3_methods/src/: main.rs
Chapter6/ch6_1_enum/src/: main.rs
Chapter6/ch6_2_match/src/: main.rs
Chapter6/ch6_3_if_let/: Cargo.toml
Chapter6/ch6_3_if_let/src/: main.rs
Chapter7/restaurant/src/: back_of_house.rs  lib.rs
Chapter7/restaurant/src/front_of_house/: hosting.rs
Chapter8/exercises/: Cargo.toml
Chapter8/exercises/src/: main.rs
Chapter8/hash_maps/src/: main.rs
Chapter8/strings/src/: main.rs
Chapter8/vectors/src/: main.rs
Chapter9/ch9_1/src/: main.rs
Chapter9/ch9_2/: Cargo.toml  bye.txt  hello.txt
Chapter9/ch9_2/src/: main.rs
